--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Lint
-        run: make lint
-
-      - name: Run Tests
+      - name: Run tests
         run: make test
